add module new payment dto