@@ -3,7 +3,9 @@ package com.mustapha.Spring_Students.service;
 import com.mustapha.Spring_Students.dtos.PaymentDTO;
 import com.mustapha.Spring_Students.dtos.ProgramDTO;
 import com.mustapha.Spring_Students.dtos.StudentDTO;
+import com.mustapha.Spring_Students.entities.Program;
 import com.mustapha.Spring_Students.entities.Student;
+import com.mustapha.Spring_Students.exceptions.ProgramNotFoundException;
 import com.mustapha.Spring_Students.exceptions.StudentNotFoundException;
 import com.mustapha.Spring_Students.mapping.Mapper;
 import com.mustapha.Spring_Students.repositories.StudentRepository;
@@ -18,20 +20,14 @@ import java.util.stream.Collectors;
 @Service
 @Transactional
 public class StudentServiceImpl implements StudentService{
-    public StudentRepository studentRepository;
-    public Mapper mapper;
+    private StudentRepository studentRepository;
+    private ProgramService programService;
+    private Mapper mapper;
     @Override
     public List<StudentDTO> getStudentList() {
         List<Student> studentList=studentRepository.findAll();
-        return studentList.stream().map(student -> {
-            StudentDTO studentDTO = mapper.fromStudent(student);
-            if (student.getProgram() != null) {
-                ProgramDTO programDTO = mapper.fromProgram(student.getProgram());
-                studentDTO.setProgramDTO(programDTO);
-            }
-            return studentDTO;
-        }).collect(Collectors.toList());
-
+        return studentList.stream().map(student ->
+                mapper.fromStudent(student)).toList();
     }
 
     @Override
@@ -43,7 +39,6 @@ public class StudentServiceImpl implements StudentService{
     @Override
     public StudentDTO saveStudent(StudentDTO studentDTO) {
         Student student = mapper.fromStudentDTO(studentDTO);
-        student.setProgram(mapper.fromProgramDTO(studentDTO.getProgramDTO()));
         Student savedstudent= studentRepository.save(student);
         return mapper.fromStudent(savedstudent);
     }
@@ -76,8 +71,9 @@ public class StudentServiceImpl implements StudentService{
     }
 
     @Override
-    public List<StudentDTO> findByProgram(String program) {
-        List<Student> studentList= studentRepository.findByProgramName(program);
+    public List<StudentDTO> findByProgram(String programId) throws ProgramNotFoundException {
+        Program program = mapper.fromProgramDTO(programService.getProgram(programId));
+        List<Student> studentList= studentRepository.findByProgram(program);
         return studentList.stream().map(student -> mapper.fromStudent(student)).toList();
     }
 }
